cmake_minimum_required(VERSION 3.9.0)
set(CMAKE_CUDA_COMPILER /usr/local/cuda/bin/nvcc)
set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -O3 -march=native -Wno-reorder")
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -O3  -march=native -pthread -fopenmp -Wno-reorder")
set(CMAKE_CXX_STANDARD 11)
set(CMAKE_BUILD_TYPE Release)
project(Fusion)
find_package(OpenCV REQUIRED)
add_library(fusion SHARED fusion.cpp)
add_executable(Fusion main.cpp fusion.h fusion.cpp)
target_link_libraries(Fusion fusion)
target_link_libraries(Fusion ${OpenCV_LIBS})
